[package]
name = "zk_fixed_point_chip"
version = "0.2.0"
edition = "2021"

[dependencies]
rand = "0.8"
ark-std = { version = "0.3.0", features = ["print-trace"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.1", features = ["derive"] }
clap-num = "1.0.2"
num-bigint = "0.4"
num-integer = "0.1"
itertools = "0.10.5"
hex = "0.4.3"

halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition" }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", branch = "community-edition" }

[dev-dependencies]
test-log = "0.2.11"
ethers-core = "2.0.6"

[features]
default = []

[profile.dev]
opt-level = 3
debug = 1
overflow-checks = true
incremental = true

[profile.local]
inherits = "dev"
opt-level = 3
debug = 1
debug-assertions = false
panic = 'unwind'
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
panic = "abort"
incremental = false
